fix alignment problems

--- a/styles/index.css
+++ b/styles/index.css
@@ -167,8 +167,13 @@ img {
 
 .categories {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+}
+
+.categories a {
+  margin-left: 0;
+  text-align: left;
+  display: block;
 }
 
 .project-subsection {
